'dogs_breed_bing_experement.ipynb

--- a/dogs_breed_bing_experement.ipynb
+++ b/dogs_breed_bing_experement.ipynb
@@ -17,19 +17,8 @@
     }
    ],
    "source": [
-    "from fastbook import *\n",
+    "from fastai.vision.all import *\n",
     "from fastai.vision.widgets import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pathlib\n",
-    "temp = pathlib.PosixPath\n",
-    "pathlib.PosixPath = pathlib.WindowsPath"
    ]
   },
   {
