--- a/dogs_breed_bing_experement.ipynb
+++ b/dogs_breed_bing_experement.ipynb
@@ -22,6 +22,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "source": [
+    "\n",
+    "Model that predicts one of the following dog breeds:\n",
+    "['Beagle', 'Bulldog', 'French Bulldog', 'German Shepherd',\n",
+    " 'Golden Retriever', 'Labrador Retriever', 'Poodle', 'Rottweiler']\n",
+    "\n",
+    "Data was collected using Bing Image API.\n",
+    "All data was *not* examined and corrected before fidding to model.\n",
+    "For each breed type collection of 150 images was pulled using Bing API.\n",
+    "\n",
+    "Confussion Matrix:\n",
+    "    <img src=\"index.png\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
