dogs_breed_bing_experement.ipynb

--- a/dogs_breed_bing_experement.ipynb
+++ b/dogs_breed_bing_experement.ipynb
@@ -39,7 +39,13 @@
     "For each breed type collection of 150 images was pulled using Bing API.\n",
     "\n",
     "Confussion Matrix:\n",
-    "    <img src=\"index.png\">"
+    "\n",
+    "\n",
+    "    <img src=\"index.png\">\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "## Select your dog!"
    ]
   },
   {
@@ -85,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(VBox([widgets.Label('Select your dog!'), btn_upload, out_pl, lbl_pred]))"
+    "display(VBox([widgets.Label('Upload any image of a dog'), btn_upload, out_pl, lbl_pred]))"
    ]
   }
  ],
