'dogs_breed_standford.ipynb'

--- a/dogs_breed_standford.ipynb
+++ b/dogs_breed_standford.ipynb
@@ -51,7 +51,7 @@
     "    img = PILImage.create(btn_upload.data[-1])\n",
     "    out_pl.clear_output()\n",
     "    with out_pl: display(img.to_thumb(128,128))\n",
-    "    pred,pred_idx,probs = learn_inf.predict(img[0].split('-')[1])\n",
+    "    pred,pred_idx,probs = learn_inf.predict(img)\n",
     "    lbl_pred.value = f'Prediction: {pred}; Probability: {probs[pred_idx]:.04f}'"
    ],
    "metadata": {
@@ -89,7 +89,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "display(VBox([widgets.Label('Upload any image of a dog'), btn_upload, out_pl, lbl_pred]))"
+    "display(VBox([btn_upload, out_pl, lbl_pred]))"
    ],
    "metadata": {
     "collapsed": false,
